--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,14 @@
                 padding: 1rem 5%;
                 max-width: 1024px;
                 margin: 0 auto;
+                background: rgba(255, 255, 255, 0.8);
+                backdrop-filter: blur(10px);
+                transition: all 0.3s ease;
+            }
+
+            nav:hover {
+                background: rgba(255, 255, 255, 0.95);
+                transform: translateY(2px);
             }
 
             .logo {
@@ -60,12 +68,19 @@
                 -webkit-background-clip: text;
                 -webkit-text-fill-color: transparent;
                 letter-spacing: -0.5px;
+                transition: transform 0.3s ease;
+            }
+
+            .logo:hover {
+                transform: scale(1.05);
             }
 
             nav ul {
                 display: flex;
                 list-style: none;
                 gap: 2.5rem;
+                flex-wrap: wrap;
+                justify-content: center;
             }
 
             nav a {
@@ -73,19 +88,44 @@
                 text-decoration: none;
                 font-weight: 500;
                 font-size: 0.95rem;
-                transition: all 0.3s ease;
+                transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
                 padding: 0.5rem 1rem;
                 border-radius: 8px;
+                position: relative;
+                overflow: hidden;
             }
 
             nav a:hover {
-                background: var(--secondary-dark);
-                opacity: 1;
+                background: rgba(245, 245, 247, 0.8);
+                transform: translateY(-2px);
+                box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            }
+
+            nav a::after {
+                content: "";
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                width: 100%;
+                height: 2px;
+                background: var(--gradient);
+                transform: scaleX(0);
+                transition: transform 0.3s ease;
+            }
+
+            nav a:hover::after {
+                transform: scaleX(1);
             }
 
             nav a.active {
                 background: var(--gradient);
                 color: white;
+                box-shadow: 0 4px 15px rgba(0, 102, 204, 0.3);
+            }
+
+            nav a.active:hover {
+                transform: translateY(-2px);
+                box-shadow: 0 6px 20px rgba(0, 102, 204, 0.4);
             }
 
             /* Hero Section */
